--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1 class="container">todo list</h1>
+<div class="container">
+  <app-header></app-header>
+  <hr>
+  <router-outlet></router-outlet>
+</div>
