added google Oauth and clean up some routes

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,17 @@
-<p>welcome works!</p>
+<div class="row">
+  <div class="col-sm-12 col-md-5 col-lg-5">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-6">Welcome to Todo list app</h1>
+        <p class="lead">...</p>
+        <button
+        (click)="logInWithGoogle()"
+        class="btn btn-primary btn-block text-center"
+        type="button"
+      >
+         Sign in with Google
+      </button>
+      </div>
+    </div>
+  </div>
+</div>
