--- a/src/app/create-dialog/create-dialog.component.html
+++ b/src/app/create-dialog/create-dialog.component.html
@@ -14,7 +14,7 @@
         placeholder="ex: walk dog, go shopping"
       ></textarea>
     </div>
-    <button type='submit' mat-flat-button color="primary">Add todo Item</button>
+    <button type='submit' mat-flat-button color="primary">Add todo Items</button>
     <button class="ml-1" (click)='onFinishAdding()' mat-flat-button color="warn">Finish Adding</button>
   </form>
 </mat-dialog-actions>
