--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -8,4 +8,23 @@
     aria-label="Search"
   />
 </div>
-<button mat-raised-button (click)="openCreateTodoDialog()">Create Todo</button>
+<button mat-raised-button (click)="openCreateTodoDialog()">Create Todos</button>
+
+<table class="table">
+  <thead>
+    <tr >
+      <th scope="col">#</th>
+      <th scope="col">todos</th>
+      <th scope="col">complete</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor='let todo of todos;'>
+      <th scope="row">{{ todo.id }}</th>
+      <td>{{ todo.content }}</td>
+      <td><input #checkBox (change)='onUpdate(todo)' [checked]= "todo.completed"  type="checkbox" class="form-check-input" id="checkBox"> </td>
+      <td><button (click)='onDelete(todo.id)' class="btn btn-danger">delete</button></td>
+    </tr>
+  </tbody>
+</table>
