--- a/src/app/create-dialog/create-dialog.component.html
+++ b/src/app/create-dialog/create-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content class="mat-typography">
-  <h3>Create todo item</h3>
+  <h3>Create todo items</h3>
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
@@ -15,7 +15,7 @@
       ></textarea>
     </div>
     <button type='submit' mat-flat-button color="primary">Add todo Items</button>
-    <button class="ml-1" (click)='onFinishAdding()' mat-flat-button color="warn">Finish Adding</button>
+    <button class="ml-1" (click)='onFinishAdding()' mat-flat-button color="accent">Done</button>
   </form>
 </mat-dialog-actions>
 
