--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -42,7 +42,7 @@
 
 
 <div cdkDropList class="todo-list" (cdkDropListDropped)="drop($event)">
-  <div class="todo-box" *ngFor="let todo of todos" cdkDrag>
+  <div class="todo-box" *ngFor="let todo of todos | filterTodos : filterStr" cdkDrag>
     {{ todo.content }}
     <br>
     <input #checkBox (change)='onUpdate(todo)' [checked]= "todo.completed"  type="checkbox" class="form-check-input" id="checkBox">
