added font awesome and a bit of the style

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,17 +1,16 @@
-<div class="row">
-  <div class="col-sm-12 col-md-5 col-lg-5">
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-6">Welcome to Todo list app</h1>
-        <p class="lead">...</p>
-        <button
-        (click)="logInWithGoogle()"
-        class="btn btn-primary btn-block text-center"
-        type="button"
-      >
-         Sign in with Google
-      </button>
-      </div>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Welcome to Todo list app</h1>
+    <p class="lead">
+      App plication to help you tracking you tasks
+    </p>
+    <button
+      (click)="logInWithGoogle()"
+      class="btn btn-primary btn-block text-center"
+      type="button"
+    >
+      <i class="fab fa-google" style="font-size: 24px"></i
+      ><span class="ml-1">Sign in with Google</span>
+    </button>
   </div>
 </div>
