--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,27 +1,27 @@
 <div class="md-form mt-1 mb-2 pr-5">
   <input
-    [(ngModel)]="searchStr"
+  [(ngModel)]='searchStrBox'
     class="form-control"
     type="text"
-    placeholder="Search ..."
+    placeholder="Search todo content ..."
     aria-label="Search"
   />
 </div>
 
-<mat-radio-group aria-label="Select an option" [(ngModel)]="filterStr">
+<mat-radio-group aria-label="Select an option"
+[(ngModel)]="filterStr">
+
   <mat-radio-button [checked]="true" value="all">All</mat-radio-button>
   <mat-radio-button value="completed">Completed</mat-radio-button>
   <mat-radio-button value="pending">Pending</mat-radio-button>
 </mat-radio-group>
-<br />
+<br>
 
-<button mat-raised-button (click)="openCreateTodoDialog()">
-  <i class="fa fa-plus-square-o" style="font-size: 24px"></i><span class="ml-1">Create Todos</span>
-</button>
+<button mat-raised-button (click)="openCreateTodoDialog()">Create Todos</button>
 
-<table class="table">
+<!-- <table class="table">
   <thead>
-    <tr>
+    <tr >
       <th scope="col">#</th>
       <th scope="col">todos</th>
       <th scope="col">complete</th>
@@ -30,49 +30,23 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let todo of todos | filterTodos: filterStr">
+    <tr *ngFor="let todo of todos | filterTodos : filterStr">
       <th scope="row">{{ todo.id }}</th>
       <td>{{ todo.content }}</td>
-      <td>
-        <input
-          #checkBox
-          (change)="onUpdate(todo)"
-          [checked]="todo.completed"
-          type="checkbox"
-          class="form-control"
-          id="checkBox"
-        />
-      </td>
-      <td>
-        <button (click)="onEdit(todo)" class="btn btn-warning">Edit</button>
-      </td>
-      <td>
-        <button (click)="onDelete(todo.id)" class="btn btn-danger">
-          delete
-        </button>
-      </td>
+      <td><mat-checkbox (change)='onUpdate(todo)' [checked]= "todo.completed"></mat-checkbox> </td>
+
+      <td><button (click)='onEdit(todo)' class="btn btn-warning">Edit</button></td>
+      <td><button (click)='onDelete(todo.id)' class="btn btn-danger">delete</button></td>
     </tr>
   </tbody>
-</table>
+</table> -->
+
 
 <div cdkDropList class="todo-list" (cdkDropListDropped)="drop($event)">
-  <div
-    class="todo-box"
-    *ngFor="let todo of todos | filterTodos: filterStr"
-    cdkDrag
-  >
+  <div class="todo-box" *ngFor="let todo of todos | filterTodos : filterStr | filterSearchBox : searchStrBox : 'content'" cdkDrag>
     {{ todo.content }}
-    <br />
-    <input
-      #checkBox
-      (change)="onUpdate(todo)"
-      [checked]="todo.completed"
-      type="checkbox"
-      class="form-check-input"
-      id="checkBox"
-    />
-    <br />
-    <button (click)="onEdit(todo)" class="btn btn-warning">Edit</button>
-    <button (click)="onDelete(todo.id)" class="btn btn-danger">delete</button>
+    <mat-checkbox (change)='onUpdate(todo)' [checked]= "todo.completed"></mat-checkbox>
+    <button (click)='onEdit(todo)' mat-raised-button style="background-color: yellow;"><i class='far fa-edit' style='font-size:24px'></i></button>
+    <button (click)='onDelete(todo.id)' mat-raised-button color="warn"><i class="fa fa-trash-o" style="font-size:24px"></i></button>
   </div>
 </div>
