--- a/src/app/create-update-dialog/create-update-dialog.component.html
+++ b/src/app/create-update-dialog/create-update-dialog.component.html
@@ -16,8 +16,9 @@
       ></textarea>
     </div>
     <button *ngIf="!isUpdate" type='submit' mat-flat-button color="primary">Add todo Items</button>
+    <button *ngIf="!isUpdate" class="ml-1" (click)='onFinishAdding()' mat-flat-button color="accent">Done</button>
     <button *ngIf="isUpdate" type='button' (click)='onEditItem(form.value)' mat-flat-button color="primary">Edit Todo item</button>
-    <button class="ml-1" (click)='onFinishAdding()' mat-flat-button color="accent">Done</button>
+    <button *ngIf="isUpdate" class="ml-1" (click)='onFinishAdding()' mat-flat-button color="warn">Cancel</button>
   </form>
 </mat-dialog-actions>
 
