change a bit of the style

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -15,9 +15,8 @@
 </mat-radio-group>
 <br />
 <mat-radio-group aria-label="Select an option" [(ngModel)]="displayOptionStr">
-  <label id="example-radio-group-label">Display Option</label>
-  <mat-radio-button [checked]="true" value="accending">Accending</mat-radio-button>
-  <mat-radio-button value="decending">Decending</mat-radio-button>
+  <mat-radio-button [checked]="true" value="accending">Accending Display</mat-radio-button>
+  <mat-radio-button value="decending">Decending Display</mat-radio-button>
 </mat-radio-group>
 <p> {{ displayOptionStr }} </p>
 <br />
