--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron">
   <div class="container">
     <h1 class="display-4">Welcome to Todo list app</h1>
     <p class="lead">
