--- a/src/app/show-todo-detail-dialog/show-todo-detail-dialog.component.html
+++ b/src/app/show-todo-detail-dialog/show-todo-detail-dialog.component.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Todo item Detail</h2>
+<h2 mat-dialog-title>Detail</h2>
 <mat-dialog-content class="mat-typography">
-  <h3>Content: Develop across all platforms</h3>
-  <p>Created: Learn one way to build applications w.</p>
-
+  <h3>Content: {{ content }}</h3>
+  <h3>Created: {{ date }}</h3>
+</mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
 </mat-dialog-actions>
