--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,2 @@
-<a routerLink='todo-list'><h1>Todo List</h1></a>
+<h1>Todo List</h1>
 <button *ngIf="isUser === true" (click)='logout()' mat-raised-button color="primary">Log out</button>
