--- a/src/app/create-update-dialog/create-update-dialog.component.html
+++ b/src/app/create-update-dialog/create-update-dialog.component.html
@@ -15,8 +15,8 @@
         placeholder="ex: walk dog, go shopping"
       ></textarea>
     </div>
-    <button *ngIf="!isUpdate" type='submit' mat-flat-button color="primary">Add todo Items</button>
-    <button *ngIf="!isUpdate" class="ml-1" (click)='onFinishAdding()' mat-flat-button color="accent">Done</button>
+    <button [disabled]='!form.valid' *ngIf="!isUpdate" type='submit' mat-flat-button color="primary">Add todo Items</button>
+    <button *ngIf="!isUpdate" class="ml-1" (click)='onFinishAdding()' mat-flat-button color="accent">Finish Adding</button>
     <button *ngIf="isUpdate" type='button' (click)='onEditItem(form.value)' mat-flat-button color="primary">Edit Todo item</button>
     <button *ngIf="isUpdate" class="ml-1" (click)='onFinishAdding()' mat-flat-button color="warn">Cancel</button>
   </form>
