add spinner and some style

--- a/src/app/create-update-dialog/create-update-dialog.component.html
+++ b/src/app/create-update-dialog/create-update-dialog.component.html
@@ -1,5 +1,5 @@
-<mat-dialog-content class="mat-typography">
-  <h3 *ngIf="!isUpdate">Create todo items</h3>
+<mat-dialog-content>
+  <h3 *ngIf="!isUpdate">Create tasks</h3>
   <h3 *ngIf="isUpdate">Edit todo items</h3>
 
 </mat-dialog-content>
