--- a/src/app/show-todo-detail-dialog/show-todo-detail-dialog.component.html
+++ b/src/app/show-todo-detail-dialog/show-todo-detail-dialog.component.html
@@ -1,7 +1,8 @@
-<h2 mat-dialog-title>Detail</h2>
-<mat-dialog-content class="mat-typography">
-  <h3>Content: {{ content }}</h3>
-  <h3>Created: {{ date }}</h3>
+<h2 style="font-family: 'Chilanka', cursive;" mat-dialog-title>Detail</h2>
+<mat-dialog-content>
+  <p>Content: {{ content }}</p>
+  <p>Created: {{ date }}</p>
+  <p>Status: {{ status }}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
