--- a/src/app/show-chart-dialog/show-chart-dialog.component.html
+++ b/src/app/show-chart-dialog/show-chart-dialog.component.html
@@ -1,4 +1,5 @@
-<div mat-dialog-content>
+<p *ngIf="data_len === 0">You currently have no data for the Chart</p>
+<div *ngIf="data_len > 0"  mat-dialog-content>
   <google-chart
     #chart
     [title]="title"
