organized folder and fixed some minor issue

--- a/src/app/components/show-chart-dialog/show-chart-dialog.component.html
+++ b/src/app/components/show-chart-dialog/show-chart-dialog.component.html
@@ -1,5 +1,5 @@
-<p *ngIf="data_len === 0">You currently have no data for the Chart</p>
-<div *ngIf="data_len > 0"  mat-dialog-content>
+<p *ngIf="dataLen === 0">You currently have no data for the Chart</p>
+<div *ngIf="dataLen > 0"  mat-dialog-content>
   <google-chart
     #chart
     [title]="title"
