--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,9 @@
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-4">Welcome to Todo list app</h1>
-    <p class="lead">
-      App plication to help you tracking you tasks
-    </p>
+    <p class="display-4" >Welcome to Todo list app</p>
+    <blockquote class="blockquote">
+      <p class="mb-0">Application for task tracking</p>
+    </blockquote>
     <button
       (click)="logInWithGoogle()"
       class="btn btn-primary btn-block text-center"
@@ -14,3 +14,4 @@
     </button>
   </div>
 </div>
+
