--- a/src/app/pages/todo-list/todo-list.component.html
+++ b/src/app/pages/todo-list/todo-list.component.html
@@ -41,7 +41,7 @@
     <tr class="font-weight-light">
       <th>Todo</th>
       <th>Detail</th>
-      <th>completion</th>
+      <th>complete</th>
       <th>Edit</th>
       <th>Delete</th>
     </tr>
@@ -90,41 +90,3 @@
   </tbody>
 </table>
 
-<!-- <div cdkDropList class="todo-list" (cdkDropListDropped)="drop($event)">
-  <div
-    class="todo-box"
-    *ngFor="
-      let todo of todos
-        | filterTodos: filterStr
-        | filterSearchBox: searchStrBox:'content'
-        | displayedTodos: displayOptionStr
-    "
-    cdkDrag
-  >
-    <div>
-      {{ todo.content | shortenText }}
-      <button
-        (click)="openShowDetailDialog(todo.id)"
-        class="ml-1"
-        mat-raised-button
-      >
-        Detail
-      </button>
-    </div>
-
-    <mat-checkbox
-      (change)="onUpdate(todo)"
-      [checked]="todo.completed"
-    ></mat-checkbox>
-    <button
-      (click)="onEdit(todo)"
-      mat-raised-button
-      style="background-color: yellow"
-    >
-      <i class="far fa-edit" style="font-size: 24px"></i>
-    </button>
-    <button (click)="onDelete(todo.id)" mat-raised-button color="warn">
-      <i class="fa fa-trash-o" style="font-size: 24px"></i>
-    </button>
-  </div>
-</div> -->
