--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,2 @@
-<h1>Todo List</h1>
+<h1 class="mt-4">Todo List</h1>
 <button *ngIf="isUser === true" (click)='logout()' mat-raised-button color="primary">Log out</button>
