--- a/src/app/components/show-chart-dialog/show-chart-dialog.component.html
+++ b/src/app/components/show-chart-dialog/show-chart-dialog.component.html
@@ -1,4 +1,8 @@
 <p *ngIf="dataLen === 0">You currently have no data for the Chart</p>
+<div *ngIf="isLoading" class="spinner-grow text-primary" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
+
 <div *ngIf="dataLen > 0"  mat-dialog-content>
   <google-chart
     #chart
