--- a/src/app/pages/todo-list/todo-list.component.html
+++ b/src/app/pages/todo-list/todo-list.component.html
@@ -43,7 +43,7 @@
   <thead>
     <tr class="font-weight-light">
       <th>Todo</th>
-      <th>complete</th>
+      <th>Complete</th>
       <th>Edit</th>
       <th>Delete</th>
     </tr>
